_fix.txt
  File "<string>", line 3
    old = '\
            ^
SyntaxError: EOL while scanning string literal
